# Property_Insights_AI_Assistant

./: .gitignore  API_USAGE.md  ARCHITECTURE.md  Readme.md  api.py  config.py  index_data.py  main.py  property_transactions_dataset_clustered.csv  property_transactions_dataset_clustered.json  pyproject.toml  rag.ipynb  requirements.txt
